# evercore

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.py  build.sh
eventide/: Cargo.toml
eventide/src/: aggregate.rs  contexts.rs  event.rs  lib.rs  memory.rs  snapshot.rs
eventide_sqlite/: Cargo.toml
eventide_sqlite/src/: lib.rs
eventide_sqlx/: Cargo.toml  README.md  test.db
eventide_sqlx/src/: lib.rs  mysql.rs  pg.rs  queries.rs  schema.rs  sqlite.rs
eventide_sqlx/tests/: mysql.rs  postgres.rs  sqlite.rs  test.rs
eventide_sqlx/tests/common/: mod.rs
evercore/: Cargo.toml
evercore/src/: aggregate.rs  error.rs  event.rs  memory.rs  snapshot.rs  storage_engine.rs
evercore_sqlx/: .env  Cargo.toml  README.md  docker-compose.yml
evercore_sqlx/src/: lib.rs
evercore_sqlx/tests/: mysql.rs  postgres.rs  sqlite.rs
evercore_sqlx/tests/common/: mod.rs
example/: Cargo.toml
example/src/: full_implementation.rs  main.rs  struct_backed_aggregate.rs
