[package]
name = "eventide-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.25"
eventide = { version = "0.1.0", path="../eventide", features=[] }
rusqlite = "0.29.0"
thiserror = "1.0.40"

