[package]
name = "eventide-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = { verson="0.28.5", features=["derive"] }
async-trait = "0.1.68"
chrono = "0.4.25"
eventide = { version = "0.1.0", path="../eventide", features=[] }
thiserror = "1.0.40"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "any", "all"] }


