[package]
name = "evercore_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.25"
evercore = { version = "0.1.0", path="../evercore", features=[] }
thiserror = "1.0.40"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "any", "all"] }
futures = "0.3.28"

[dev-dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = {version ="1.28.2", features=["full"]}



