[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventide = { version = "0.1.0", path="../eventide" }
serde = "1.0.163"
thiserror = "1.0.40"
tokio = {version="1.28.1", features=["full"]}
